Migrate tests to JUnit5 (#198)
* Migrate annotations and imports
* Migrate assertions
* Remove public visibility for test classes and methods
* Minor code cleanup

Co-authored-by: strangelookingnerd <strangelookingnerd@users.noreply.github.com>