@@ -1,22 +1,21 @@
 package jenkins.plugins.http_request;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 /**
  * @author Martin Mosegaard Amdisen
  */
-public class HttpRequestDescriptorImplTest {
+class HttpRequestDescriptorImplTest {
 
     private static final List<Integer> DEFAULT_VALID_RESPONSE_CODES_RANGE = streamToList(IntStream.rangeClosed(100, 399));
 
     @Test
-    public void parseToRangeShouldHandleEmptyString() {
+    void parseToRangeShouldHandleEmptyString() {
         String value = "";
         List<IntStream> ranges = HttpRequest.DescriptorImpl.parseToRange(value);
         assertEquals(1, ranges.size());
@@ -24,7 +23,7 @@ public class HttpRequestDescriptorImplTest {
     }
 
     @Test
-    public void parseToRangeShouldHandleNull() {
+    void parseToRangeShouldHandleNull() {
         String value = null;
         List<IntStream> ranges = HttpRequest.DescriptorImpl.parseToRange(value);
         assertEquals(1, ranges.size());
@@ -32,6 +31,6 @@ public class HttpRequestDescriptorImplTest {
     }
 
     private static List<Integer> streamToList(IntStream stream) {
-        return stream.boxed().collect(Collectors.toList());
+        return stream.boxed().toList();
     }
 }
